manifests/app/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  # annotations:
  #   argocd.argoproj.io/tracking-id: demo-todo-app:/Namespace:demo-todo/demo-todo
  name: demo-todo
